fix: 修复 setting 模块业务逻辑问题和 NullPointerException
主要修改：
1. 添加 orgType 字段支持源/目标 ORG 类型隔离
   - DataiConfigAuditLog、DataiConfigEnvironment、DataiConfigSnapshot 添加 orgType 字段
   - 相关 DTO、VO、Mapper XML 同步更新
   - 创建 SQL 脚本：add_org_type_to_*.sql

2. 修复业务逻辑问题
   - SalesforceConfigCacheManager：添加并发安全锁，修复环境初始化查询条件
   - DataiConfigSnapshotServiceImpl：添加快照恢复审计日志记录
   - DataiConfigEnvironmentServiceImpl：完善环境切换的事务回滚机制
   - EnvironmentSwitchListener：移除重复环境切换，移除 @Async 注解
   - ConfigChangeListener：添加空指针检查

3. 修复 NullPointerException
   - DataiConfigurationController.list()：添加 list 空值检查
   - DataiConfigSnapshotController.list()：添加 list 空值检查
   - 过滤 null environmentId 防止 Map 创建失败

4. 生成 API 文档
   - DataiConfigEnvironmentController：切换环境、获取当前环境接口文档
   - DataiConfigSnapshotController：快照管理完整接口文档
   - DataiConfigurationController：配置管理完整接口文档
   - 创建 setting 模块索引：docs/api-docs/setting/index.md

5. 更新文档索引
   - 更新 docs/index.md 添加 setting 模块索引链接